# FastAPI_assignment_app

./: .gitignore  Makefile  README.md  heart_disease_classification.ipynb  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
fastapi_assignment/: __init__.py  dataset.py  features.py  plots.py
fastapi_assignment/modeling/: predict.py  train.py
models/: heart_disease.joblib
scripts/: process_data.py
