[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi_assignment"
version = "0.0.1"
description = "assignmet for week 2"
authors = [
  { name = "prabin-7" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["fastapi_assignment"]
include = ["pyproject.toml", "fastapi_assignment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fastapi_assignment"]
force-sort-within-sections = true

